fix: autocomplete tag visibility and scoped folder disambiguation

--- a/src/app/features/tasks/add-task-bar/add-task-bar.component.scss
+++ b/src/app/features/tasks/add-task-bar/add-task-bar.component.scss
@@ -211,11 +211,6 @@
 
     tag {
       margin-left: auto;
-
-      ::ng-deep .tag-ico,
-      ::ng-deep .circle {
-        display: none !important;
-      }
     }
   }
 
